# humiapi

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  example_usage.py  main.py  psychrolib_example.py  pyproject.toml  pytest.ini  test_api.py  test_calculations.py
app/: __init__.py  config.py  models.py  psychro_calculations.py
app/routes/: __init__.py  api.py  web.py
templates/: about.html  base.html  index.html  macros.html
