[project]
name = "abs-humidity-calc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "requests>=2.28.0",
    "httpx>=0.24.0"
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
